--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-09  Jim Blandy  <jimb@redhat.com>
+
+	* gdb.texinfo (Separate Debug Files): Remove extra semicolon.
+
 2003-06-08  Andrew Cagney  <cagney@redhat.com>
 
 	* gdbint.texinfo (Target Architecture Definition): Delete
