--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-10  Andrew Cagney  <cagney@redhat.com>
+
+	* remote-fileio.h (REMOTE_FILEIO_H): Replace FILEIO_H.
+	* Makefile.in (remote-fileio.o): Update dependencies.
+	* remote-fileio.c: Include "gdb_wait.h" and "gdb_stat.h".  Do not
+	include <setjmp.h>, or <sys/types.h> conditional on USG.
+	(remote_fio_jmp_buf): Delete global variable.
+
 2003-06-10  Corinna Vinschen  <vinschen@redhat.com>
 
 	* Makefile.in: Add dependencies for remote-fileio.o.
