--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-11  Corinna Vinschen  <vinschen@redhat.com>
+
+	* remote-fileio.c: Make ari happy.
+
 2003-06-10  J. Brobecker  <brobecker@gnat.com>
 
 	* rs6000-nat.c (child_xfer_memory): Compute the right address when
