* Makefile.in (tuiDisassem.o): Update dependencies.
tui:
	* tuiSource.c (tuiVerticalSourceScroll): Use get_frame_pc.
	* tuiSourceWin.c (tuiHorizontalSourceScroll): Likewise.
	* tuiStack.c (tui_get_function_from_frame): Likewise.
	(tuiShowFrameInfo): Likewise.
	* tuiWin.c (_makeVisibleWithNewHeight): Likewise.
	* tui-hooks.c (tui_selected_frame_level_changed_hook): Likewise.
	* tuiDisassem.c (tuiVerticalDisassemScroll): Likewise.
	Include "disasm.h".

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-12  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (tuiDisassem.o): Update dependencies.
+
 2003-06-12  David Carlton  <carlton@bactrian.org>
 
 	* symtab.h: Delete declaration of make_symbol_overload_list.
