--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-12  Jim Blandy  <jimb@redhat.com>
 
+	* ppc-linux-nat.c (ppc_register_u_addr): Correctly compute u-area
+	register offsets for both the 32- and 64-bit interfaces.
+
 	Actually finish the job started by my change of 2003-05-29.
 	* config/powerpc/tm-linux.h (SKIP_TRAMPOLINE_CODE): Remove the
 	other #definition of this.
